examples/diagnostics/expected/1103-diagnostics-err-bad-variant.stderr
error: no variant 'Bogus' on type 'Shape'
  --> examples/diagnostics/1103-diagnostics-err-bad-variant.sx:18:14
   |
18 |         case .Bogus: (x) { print("bogus={}\n", x); }
   |              ^^^^^^
